Bug 1096556 - [Loop] Stretching screen from bottom while in loop options causes a rift that lets you see the page beneath it

--- a/app/style/settings.css
+++ b/app/style/settings.css
@@ -4,7 +4,7 @@
   transform: translateY(100%);
 }
 
-.settings.panel {
+.settings.panel, .settings.panel li  {
   background: #f4f4f4;
 }
 
